--- a/Styles/site.scss
+++ b/Styles/site.scss
@@ -1,11 +1,9 @@
-html, body {
-  height: 15%;
-}
-
-*, *:focus, *:hover {
-  outline: #0c4128;
-}
-
-div{
-  color: brown;
-}
+@import "inc/general";
+@import "inc/type";
+@import "inc/buttons";
+@import "inc/cards";
+@import "inc/navbar";
+@import "inc/header";
+@import "inc/blocks";
+@import "inc/posts";
+@import "inc/pagination";
