fixed css issues with the recursive navigation implementation

--- a/Views/Shared/RecursiveNavigation.cshtml
+++ b/Views/Shared/RecursiveNavigation.cshtml
@@ -2,11 +2,11 @@
 
 @if (@Model.Items.Count > 0)
 {
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="@WebApp.Url(Model)" id="navbarDropdown" data-toggle="dropdown">
-            @Model.MenuTitle
+    <li class="@(Model.ParentId == null ? "nav-item dropdown" : "")">
+        <a class="@(Model.ParentId == null ? "nav-link dropdown-toggle" : "dropdown-item")" href="@WebApp.Url(Model)" id="navbarDropdown" data-toggle="dropdown">
+            @Model.MenuTitle @(Model.ParentId == null ? "" : ">>")
         </a>
-        <ul class="dropdown-menu dropdown-submenu">
+        <ul class=" @(Model.ParentId == null ? "dropdown-menu dropdown-submenu" : "submenu dropdown-menu")">
 
             @foreach (var child in Model.Items)
             {
@@ -17,7 +17,7 @@
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link" href="@WebApp.Url(Model)">@Model.MenuTitle</a>
+    <li class="nav-item @(Model.ParentId == null ? "nav-item" : "")">
+        <a class="nav-link @(Model.ParentId == null ? "nav-link" : "dropdown-item")" href="@WebApp.Url(Model)">@Model.MenuTitle</a>
     </li>
 }
