Created service for seeding content

--- a/Views/Setup/Index.cshtml
+++ b/Views/Setup/Index.cshtml
@@ -85,7 +85,7 @@
                             and the <code>~/seed</code> directory from your project.
                         </p>
                         <p class="mt-5">
-                            <a href="@Url.Action("Seed")" class="btn btn-primary btn-sm">Seed some data</a>
+                            <a href="@Url.Action("Seed23")" class="btn btn-primary btn-sm">Seed some data</a>
                             <a href="~/manager/login" class="btn btn-primary btn-sm">Take me to the manager</a>
                         </p>
                     </div>
