--- a/Views/Shared/RecursiveNavigation.cshtml
+++ b/Views/Shared/RecursiveNavigation.cshtml
@@ -1,23 +1,34 @@
 @model Piranha.Models.SitemapItem
-
-@if (@Model.Items.Count > 0)
-{
-    <li class="@(Model.ParentId == null ? "nav-item dropdown" : "")">
-        <a class="@(Model.ParentId == null ? "nav-link dropdown-toggle" : "dropdown-item")" href="@WebApp.Url(Model)" data-toggle="@(Model.ParentId == null ? "dropdown" : "")">
-            @Model.MenuTitle @(Model.ParentId == null ? "" : ">>")
-        </a>
-        <ul class=" @(Model.ParentId == null ? "dropdown-menu dropdown-submenu" : "submenu dropdown-menu")">
-
-            @foreach (var child in Model.Items)
+@{
+    if (@Model.Items.Count > 0)
+    {
+        <li class="@(Model.ParentId == null ? "nav-item dropdown" : "nav-item")">
+            @if (Model.ParentId == null)
             {
-                @await Html.PartialAsync("RecursiveNavigation", child)
+                <a class="nav-link dropdown-toggle" href="@WebApp.Url(Model)" data-toggle="dropdown">
+                    @Model.MenuTitle
+                </a>
             }
-        </ul>
-    </li>
-}
-else
-{
-    <li class="@(Model.ParentId == null ? "nav-item" : "")">
-        <a class="@(Model.ParentId == null ? "nav-link" : "dropdown-item")" href="@WebApp.Url(Model)">@Model.MenuTitle</a>
-    </li>
+            else
+            {
+                <a class="dropdown-item" href="@WebApp.Url(Model)">
+                    @Model.MenuTitle >>
+                </a>
+            }
+
+            <ul class=" @(Model.ParentId == null ? "dropdown-menu dropdown-submenu" : "submenu dropdown-menu")">
+
+                @foreach (var child in Model.Items)
+                {
+                    @await Html.PartialAsync("RecursiveNavigation", child)
+                }
+            </ul>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="@(Model.ParentId == null ? "nav-link" : "dropdown-item")" href="@WebApp.Url(Model)">@Model.MenuTitle</a>
+        </li>
+    }
 }
