--- a/Views/Cms/DisplayTemplates/WhitePaper.cshtml
+++ b/Views/Cms/DisplayTemplates/WhitePaper.cshtml
@@ -3,5 +3,30 @@
 @{
     Layout = null;
 }
-
-<h1>White paper custom block</h1>
+<h1>White paper</h1>
+@using (Html.BeginForm("PostWhitePaper", "WhitePaper", FormMethod.Post))
+{
+    <div>
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.Company)
+        @Html.TextBoxFor(m => m.Company)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.Email)
+        @Html.TextBoxFor(m => m.Email)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.Phone)
+        @Html.TextBoxFor(m => m.Phone)
+    </div>
+    <div>
+        @Html.LabelFor(m => m.Position)
+        @Html.TextBoxFor(m => m.Position)
+    </div>
+    <div>
+        <input type="submit" value="Subscribe"/>
+    </div>
+}
