Created dbContext for non piranha entities. Newsletter and White paper data are save to the db.

--- a/Views/Cms/DisplayTemplates/Newsletter.cshtml
+++ b/Views/Cms/DisplayTemplates/Newsletter.cshtml
@@ -1,8 +1,7 @@
 @using TAU.Website
 @using Microsoft.Extensions.Options
-@model TAU.Website.Models.Custom_Blocks.Newsletter
+@model TAU.Website.Models.Custom_Blocks.NewsletterViewModel
 @inject IOptions<GoogleReCaptchaConfig> GoogleRecaptchaConfig
-
 @{
     Layout = null;
 }
