--- a/Views/Cms/DisplayTemplates/WhitePaper.cshtml
+++ b/Views/Cms/DisplayTemplates/WhitePaper.cshtml
@@ -1,4 +1,4 @@
-@model TAU.Website.Models.Custom_Blocks.WhitePaper
+@model TAU.Website.Models.Custom_Blocks.WhitePaperViewModel
 @using Microsoft.Extensions.Options
 @using TAU.Website
 @inject IOptions<GoogleReCaptchaConfig> GoogleRecaptchaConfig
@@ -7,6 +7,7 @@
     Layout = null;
 }
 <h1>White paper</h1>
+
 @using (Html.BeginForm("PostWhitePaper", "WhitePaper", FormMethod.Post))
 {
     <div>
@@ -31,7 +32,6 @@
     </div>
     <div>
         <input type="hidden" id="whitePaperReCaptchaToken" asp-for="Token" name="Token"/>
-
     </div>
     <div>
         <input type="submit" value="Subscribe"/>
