--- a/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
@@ -5,27 +5,63 @@
 @{
     Layout = null;
 }
-<h1>Newsletter</h1>
-@using (Html.BeginForm("PostNewsletter", "Newsletter", FormMethod.Post))
-{
-    <div>
+<form id="newsletterForm" novalidate class="needs-validation">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="form-group">
         <label asp-for="Email">Email</label>
         <input type="text" id="newsletterEmail" asp-for="Email" name="Email">
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div>
         <input type="hidden" id="newsLetterReCaptchaToken" asp-for="Token" name="Token"/>
     </div>
-    <div>
-        <input type="submit" value="Subscribe"/>
+    <div class="form-group">
+        <button type="button" class="btn btn-info" onclick="submitNewsletter()">Subscribe</button>
     </div>
-}
+</form>
+
+<div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="newsletterModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="newsletterModalLabel">Newsletter</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="newsletterReturnStatus">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script>
-    $(function(){
-      grecaptcha.ready(function() {
-        grecaptcha.execute('@GoogleRecaptchaConfig.Value.SiteKey', {action: 'submit'}).then(function(token) {
-            document.getElementById("newsLetterReCaptchaToken").value = token;
+    function submitNewsletter() {
+        grecaptcha.ready(function() {
+           grecaptcha.execute('@GoogleRecaptchaConfig.Value.SiteKey', {action: 'submit'}).then(function(token) {
+               $("#newsLetterReCaptchaToken").val(token);
+               var data = $("#newsletterForm").serialize();
+               var statusMessage ="";
+               $.ajax({
+                   type: 'POST',
+                   url: '/Newsletter/PostNewsletter',
+                   contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
+                   data: data,
+                   success: function (result) {
+                       statusMessage = "Email saved."
+                       $('#newsletterReturnStatus').text(statusMessage);
+                       $('#newsletterModal').modal('show')
+                   },
+                   error: function () {
+                       statusMessage = "Error while saving email."
+                       $('#newsletterReturnStatus').text(statusMessage);
+                       $('#newsletterModal').modal('show')
+                   }
+               })
+           });
         });
-      });
-    })
+    }
 </script>
