--- a/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
@@ -7,10 +7,10 @@
 }
 <form id="newsletterForm" novalidate class="needs-validation">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email">Email</label>
-        <input type="text" id="newsletterEmail" asp-for="Email" name="Email">
-        <span asp-validation-for="Email" class="text-danger"></span>
+    <div class="form-group row-cols-lg-3">
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="newsletterEmail" asp-for="Email" name="Email" placeholder="Email">
+        </div>
     </div>
     <div>
         <input type="hidden" id="newsLetterReCaptchaToken" asp-for="Token" name="Token"/>
@@ -21,21 +21,21 @@
 </form>
 
 <div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="newsletterModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="newsletterModalLabel">Newsletter</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id="newsletterReturnStatus">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="newsletterModalLabel">Newsletter</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="newsletterReturnStatus">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <script>
