--- a/Views/Cms/DisplayTemplates/WhitePaperViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/WhitePaperViewModel.cshtml
@@ -6,44 +6,86 @@
 @{
     Layout = null;
 }
-<h1>White paper</h1>
+<button type="button" class="btn btn-info" onclick="displayWhitePaperForm()">White Paper</button>
 
-@using (Html.BeginForm("PostWhitePaper", "WhitePaper", FormMethod.Post))
-{
-    <div>
-        <label asp-for="Name">Name</label>
-        <input type="text" id="whitePaperName" asp-for="Name" name="Name">
+<div class="modal fade" id="whitePaperModal" tabindex="-1" role="dialog" aria-labelledby="whitePaperModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="whitePaperModalLabel">White Paper</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="whitePaperReturnStatus">
+                <form id="whitePaperForm" novalidate class="needs-validation">
+                    <div class="form-group row">
+                        <label asp-for="Name" class="col-sm-2 col-form-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="whitePaperName" asp-for="Name" placeholder="Name" name="Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label asp-for="Company" class="col-sm-2 col-form-label">Company</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="whitePaperCompany" asp-for="Company" placeholder="Company" name="Company">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label asp-for="Email" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="whitePaperEmail" asp-for="Email" placeholder="Email" name="Email">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label asp-for="Phone" class="col-sm-2 col-form-label">Phone</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="whitePaperPhone" asp-for="Phone" placeholder="Phone" name="Phone">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label asp-for="Position" class="col-sm-2 col-form-label">Position</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="whitePaperPosition" asp-for="Position" placeholder="Position" name="Position">
+                        </div>
+                    </div>
+                    <div>
+                        <input type="hidden" id="whitePaperReCaptchaToken" asp-for="Token" name="Token"/>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="submitWhitePaper()">Submit</button>
+            </div>
+        </div>
     </div>
-    <div>
-        <label asp-for="Company">Company</label>
-        <input type="text" id="whitePaperCompany" asp-for="Company" name="Company">
-    </div>
-    <div>
-        <label asp-for="Email">Email</label>
-        <input type="text" id="whitePaperEmail" asp-for="Email" name="Email">
-    </div>
-    <div>
-        <label asp-for="Phone">Phone</label>
-        <input type="text" id="whitePaperPhone" asp-for="Phone" name="Phone">
-    </div>
-    <div>
-        <label asp-for="Position">Position</label>
-        <input type="text" id="whitePaperPosition" asp-for="Position" name="Position">
-    </div>
-    <div>
-        <input type="hidden" id="whitePaperReCaptchaToken" asp-for="Token" name="Token"/>
-    </div>
-    <div>
-        <input type="submit" value="Subscribe"/>
-    </div>
-}
+</div>
+
 
 <script>
-    $(function(){
-      grecaptcha.ready(function() {
-        grecaptcha.execute('@GoogleRecaptchaConfig.Value.SiteKey', {action: 'submit'}).then(function(token) {
-            document.getElementById("whitePaperReCaptchaToken").value = token;
+    function displayWhitePaperForm(){
+        $('#whitePaperModal').modal('show')
+    }
+    
+    function submitWhitePaper() {
+        grecaptcha.ready(function() {
+            grecaptcha.execute('@GoogleRecaptchaConfig.Value.SiteKey', {action: 'submit'}).then(function(token) {
+                $("#whitePaperReCaptchaToken").val(token);
+                var data = $("#whitePaperForm").serialize();
+                $.ajax({
+                    type: 'POST',
+                    url: '/WhitePaper/PostWhitePaper',
+                    contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
+                    data: data,
+                    success: function (result) {
+                        $('#whitePaperModal').modal('hide')
+                    },
+                    error: function () {
+                        $('#whitePaperModal').modal('hide')
+                    }
+                })
+            });
         });
-      });
-    })
+    }
 </script>
