--- a/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
@@ -6,10 +6,10 @@
     Layout = null;
 }
 <form id="newsletterForm" novalidate class="needs-validation">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group row-cols-lg-3">
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="newsletterEmail" asp-for="Email" name="Email" placeholder="Email">
+            <input type="text" class="form-control" id="newsletterEmail" asp-for="Email" name="Email" placeholder="Email" required pattern="^([a-zA-Z0-9_\-\.]+)@@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$">
+            <div class="invalid-feedback">Not a correct email address.</div>
         </div>
     </div>
     <div>
@@ -40,6 +40,13 @@
 
 <script>
     function submitNewsletter() {
+        var form = $("#newsletterForm")[0];
+        form.classList.add('was-validated')
+        
+        if (!form.checkValidity()){
+            return;
+        }
+        
         grecaptcha.ready(function() {
            grecaptcha.execute('@GoogleRecaptchaConfig.Value.SiteKey', {action: 'submit'}).then(function(token) {
                $("#newsLetterReCaptchaToken").val(token);
@@ -51,14 +58,18 @@
                    contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
                    data: data,
                    success: function (result) {
-                       statusMessage = "Email saved."
+                       form.classList.remove('was-validated')
+                       form.reset();
+                       statusMessage = "Email saved.";
                        $('#newsletterReturnStatus').text(statusMessage);
-                       $('#newsletterModal').modal('show')
+                       $('#newsletterModal').modal('show');
                    },
                    error: function () {
-                       statusMessage = "Error while saving email."
+                       form.classList.remove('was-validated');
+                       form.reset();
+                       statusMessage = "Error while saving email.";
                        $('#newsletterReturnStatus').text(statusMessage);
-                       $('#newsletterModal').modal('show')
+                       $('#newsletterModal').modal('show');
                    }
                })
            });
