After subbmiting the white paper form redirect the user to the whitepaper page. The url can be set from the manager menu; js is minified.

--- a/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
@@ -38,41 +38,4 @@
     </div>
 </div>
 
-<script>
-    function submitNewsletter() {
-        var form = $("#newsletterForm")[0];
-        form.classList.add('was-validated')
-        
-        if (!form.checkValidity()){
-            return;
-        }
-        
-        grecaptcha.ready(function() {
-           grecaptcha.execute('@GoogleRecaptchaConfig.Value.SiteKey', {action: 'submit'}).then(function(token) {
-               $("#newsLetterReCaptchaToken").val(token);
-               var data = $("#newsletterForm").serialize();
-               var statusMessage ="";
-               $.ajax({
-                   type: 'POST',
-                   url: '/Newsletter/PostNewsletter',
-                   contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
-                   data: data,
-                   success: function (result) {
-                       form.classList.remove('was-validated')
-                       form.reset();
-                       statusMessage = "Email saved.";
-                       $('#newsletterReturnStatus').text(statusMessage);
-                       $('#newsletterModal').modal('show');
-                   },
-                   error: function () {
-                       form.classList.remove('was-validated');
-                       form.reset();
-                       statusMessage = "Error while saving email.";
-                       $('#newsletterReturnStatus').text(statusMessage);
-                       $('#newsletterModal').modal('show');
-                   }
-               })
-           });
-        });
-    }
-</script>
+<script id="newsletter" data-siteKey="@GoogleRecaptchaConfig.Value.SiteKey" src="Assets/newsletter.min.js" ></script>
