Made newsletter saveable.

--- a/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/NewsletterViewModel.cshtml
@@ -1,6 +1,6 @@
 @using TAU.Website
 @using Microsoft.Extensions.Options
-@model TAU.Website.Models.Custom_Blocks.NewsletterViewModel
+@model NewsPaperBlock
 @inject IOptions<GoogleReCaptchaConfig> GoogleRecaptchaConfig
 @{
     Layout = null;
