--- a/Views/Cms/DisplayTemplates/WhitePaperViewModel.cshtml
+++ b/Views/Cms/DisplayTemplates/WhitePaperViewModel.cshtml
@@ -1,4 +1,4 @@
-@model TAU.Website.Models.Custom_Blocks.WhitePaperViewModel
+@model TAU.Website.Models.Custom_Blocks.WhitePaperBlock
 @using Microsoft.Extensions.Options
 @using TAU.Website
 @inject IOptions<GoogleReCaptchaConfig> GoogleRecaptchaConfig
