--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,16 +6,30 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>@ViewData["Title"]</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>@ViewData["Title"]</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <link href="~/Assets/EternaTemplate/img/favicon.png" rel="icon">
+    <link href="~/Assets/EternaTemplate/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> *@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Raleway:wght@700&display=swap">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <link href="~/Assets/EternaTemplate/vendor/animate.css/animate.min.css" rel="stylesheet">
+    <link href="~/Assets/EternaTemplate/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Assets/EternaTemplate/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/Assets/EternaTemplate/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/Assets/EternaTemplate/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="~/Assets/EternaTemplate/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <environment names="Development">
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
         <link rel="stylesheet" href="~/Assets/EternaTemplate/css/style.css" asp-append-version="true">
+
     </environment>
     <environment names="Production">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true">
@@ -26,12 +40,11 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md navbar-light fixed-top">
-    <div class="container">
-        @* <a class="navbar-brand" href="~/">TAU</a> *@
+<header id="header" class="d-flex align-items-center">
+    <div class="container d-flex justify-content-between align-items-center">
         <div class="logo">
             <a href="#">
-                <svg width="62.429mm" height="20.052mm" version="1.1" viewBox="0 0 62.429 20.052" xmlns="http://www.w3.org/2000/svg">
+                <svg width="25mm" height=auto version="1.1" viewBox="0 0 62.429 20.052" xmlns="http://www.w3.org/2000/svg">
                     <g transform="translate(-25.477 -78.548)" display="none">
                         <rect x="20.501" y="72.216" width="72.999" height="32.184" fill="#eaa314" stroke-width=".26458"/>
                         <g fill="#815300">
@@ -71,31 +84,24 @@
                 </svg>
             </a>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <nav id="navbar" class="navbar navbar-expand-md navbar-light">
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav ml-auto">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav ml-auto">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                    @foreach (var item in (await WebApp.Site.Sitemap.ForUserAsync(User, Auth)).Where(i => !i.IsHidden))
+                    {
+                        @await Html.PartialAsync("RecursiveNavigation", item)
+                    }
+                </ul>
+            </div>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
 
-                @foreach (var item in (await WebApp.Site.Sitemap.ForUserAsync(User, Auth)).Where(i => !i.IsHidden))
-                {
-                    @await Html.PartialAsync("RecursiveNavigation", item)
-                }
-            </ul>
-        </div>
     </div>
-</nav>
-
-
-<script src="https://www.google.com/recaptcha/api.js?render=@GoogleRecaptchaConfig.Value.SiteKey"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-@await RenderSectionAsync("script", false)
+</header>
 
 @RenderBody()
 
@@ -149,5 +155,20 @@
     </div>
 </footer>
 
+<script src="https://www.google.com/recaptcha/api.js?render=@GoogleRecaptchaConfig.Value.SiteKey"></script>
+@* <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> *@
+@* <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> *@
+@* <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> *@
+
+<script src="~/Assets/EternaTemplate/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="~/Assets/EternaTemplate/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="~/Assets/EternaTemplate/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="~/Assets/EternaTemplate/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="~/Assets/EternaTemplate/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="~/Assets/EternaTemplate/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="~/Assets/EternaTemplate/vendor/php-email-form/validate.js"></script>
+<script src="Assets/EternaTemplate/js/main.js"></script>
+
+@await RenderSectionAsync("script", false)
 </body>
 </html>
