--- a/Views/Cms/HomePage.cshtml
+++ b/Views/Cms/HomePage.cshtml
@@ -25,7 +25,6 @@
                         }
                     </div>
                 }
-
             </div>
 
             <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
@@ -40,43 +39,41 @@
     </div>
 </section>
 
-<section id="services" class="services">
-    <div class="mt-5 pt-4">
-        <div class="container mt-md-4 pt-md-4 ">
-            <div class="row">
-                @{
-                    foreach (var product in @Model.Products)
+<section id="featured" class="featured">
+    <div class="container">
+        <div class="row">
+            @{
+                foreach (var product in @Model.Products)
+                {
+                    var cardClass = "";
+                    switch (Model.Products.IndexOf(product))
                     {
-                        var cardClass = "";
-                        switch (Model.Products.IndexOf(product))
-                        {
-                            case 0:
-                                cardClass = "";
-                                break;
-                            case 1:
-                                cardClass = "mt-4 mt-md-0";
-                                break;
-                            case 2:
-                                cardClass = "mt-4 mt-lg-0";
-                                break;
-                            default:
-                                cardClass = "mt-4";
-                                break;
-                        }
-                        <div class="col-lg-4 col-md-6 d-flex align-items-stretch @cardClass">
-                            <div class="icon-box">
-                                <div class="icon">
-                                    <i class="bx bxl-dribbble"></i>
-                                </div>
-                                <h4>
-                                    <a href=@Url.Content(product.Url)>@product.Title</a>
-                                </h4>
-                                <p>@Html.Raw(product.Text)</p>
-                            </div>
-                        </div>
+                        case 0:
+                            cardClass = "";
+                            break;
+                        case 1:
+                            cardClass = "mt-4 mt-md-0";
+                            break;
+                        case 2:
+                            cardClass = "mt-4 mt-lg-0";
+                            break;
+                        default:
+                            cardClass = "mt-4";
+                            break;
                     }
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch @cardClass">
+                        <div class="icon-box">
+                            <div class="icon">
+                                <i class="bx bxl-dribbble"></i>
+                            </div>
+                            <h4>
+                                <a href=@Url.Content(product.Url)>@product.Title</a>
+                            </h4>
+                            <p>@Html.Raw(product.Text)</p>
+                        </div>
+                    </div>
                 }
-            </div>
+            }
         </div>
     </div>
 </section>
