--- a/Views/Cms/ManagedServicesPage.cshtml
+++ b/Views/Cms/ManagedServicesPage.cshtml
@@ -1,9 +1,7 @@
 @model TAU.Website.Models.Pages.ManagedServicesPage
 
-
 <section id="services" class="services">
-    <div class="mt-5 pt-4">
-        <div class="container mt-md-4 pt-md-4 ">
+        <div class="container pt-md-4">
             <div class="row">
                 @{
                     foreach (var service in @Model.ManagedServices)
@@ -39,5 +37,4 @@
                 }
             </div>
         </div>
-    </div>
 </section>
