products and service card icons can be changed

--- a/Views/Cms/HomePage.cshtml
+++ b/Views/Cms/HomePage.cshtml
@@ -64,7 +64,7 @@
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch @cardClass">
                         <div class="icon-box">
                             <div class="icon">
-                                <i class="bx bxl-dribbble"></i>
+                                <i class="@(product.Icon.Value ?? "bx bxl-dribbble")"></i>
                             </div>
                             <h4>
                                 <a href=@Url.Content(product.Url)>@product.Title</a>
@@ -86,3 +86,12 @@
         </div>
     </div>
 </section>
+
+<section id="contact" class="contact">
+    <div class="container pt-md-4">
+        <div class="row">
+                @await Html.PartialAsync("ContactForm")
+        </div>
+    </div>
+</section>
+
