--- a/Views/Cms/ManagedServicesPage.cshtml
+++ b/Views/Cms/ManagedServicesPage.cshtml
@@ -25,7 +25,7 @@
                         <div class="col-lg-4 col-md-6 d-flex align-items-stretch @cardClass">
                             <div class="icon-box">
                                 <div class="icon">
-                                    <i class="bx bxl-dribbble"></i>
+                                    <i class="@(service.Icon.Value ?? "bx bxl-dribbble")"></i>
                                 </div>
                                 <h4>
                                     <a href=@Url.Content(service.Url)>@service.Title</a>
